[package]
name = "lievre-standalone"
version = "0.0.3"
authors = ["Aram Peres <aram.peres@wavy.fm>"]
edition = "2018"
description = "Lightweight AMQP 0.9.1 server"
homepage = "https://github.com/WavyLabs/lievre"
repository = "https://github.com/WavyLabs/lievre"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
