[package]
name = "lievre"
version = "0.0.2"
authors = ["Aram Peres <aram.peres@wavy.fm>"]
edition = "2018"
description = "In-memory AMQP/RabbitMQ testing framework"
homepage = "https://github.com/wavymedia/lievre"
repository = "https://github.com/wavymedia/lievre"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
